--- a/basis.html
+++ b/basis.html
@@ -14,22 +14,30 @@
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-4">Simple header</span>
+            <span class="fs-4">Puppylove</span>
           </a>
       
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Duitse herder</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Japanse akita</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">labrador</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
           </ul>
         </header>
       </div>
       <!--Header-->
 
+      <!--main-->
+
+      <!--Carousel-->
+      
+
+      <!--Carousel-->
+
+
       <!--Footer-->
-      <footer class="bg-light text-center text-lg-start border-top border-info">
+      <footer class="bg-light text-center text-lg-start border-top border-success">
             <!--Grid container-->
             <div class="container p-4">
                 <!--Grid row-->
